--- a/Index.html
+++ b/Index.html
@@ -38,6 +38,8 @@
     <section>
         <div>
             <h1>Hello MithunCy</h1>
+            <h1>Hello MithunCy</h1>
+            <p> This is my first website</p>
         </div>
     </section>
         
