--- a/Index.html
+++ b/Index.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css">
 <body>
     <section id="header">
-        <a href="Index.html"> <img class="logo" src="Image/LOGO.png"></a>
+        <a href="Index.html"> <img class="logo" src="logo.png"></a>
         <div>
             <ul class="navbar">
                 <li><a class="active" href="Index.html">Home</a></li>
